--- a/wiki/it/Macro_Repro_Wire.html
+++ b/wiki/it/Macro_Repro_Wire.html
@@ -87,11 +87,8 @@ Replica un componente
 </p><p>Le copie sono di colore rosso e denominate "Shapexxx + il nome dell'originale".
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_ReproWire.png&amp;filetimestamp=20151022084758&amp;.html" class="mw-file-description" title="icon for the button"><img alt="icon for the button" src="../File/Macro_ReproWire.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b> Macro_ReproWire.FCMacro</b> 
+<p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_ReproWire.png&amp;filetimestamp=20151022084758&amp;.html" class="mw-file-description" title="icon for the button"><img alt="icon for the button" src="../File/Macro_ReproWire.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b> Macro_ReproWire.FCMacro</b> 
 </p>
 <pre># -*- coding: utf-8 -*-
 from __future__ import unicode_literals
@@ -207,13 +204,13 @@ except Exception:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122105028
+Cached time: 20260122105046
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.057 seconds
-Preprocessor visited node count: 117/1000000
+CPU time usage: 0.034 seconds
+Real time usage: 0.056 seconds
+Preprocessor visited node count: 116/1000000
 Post&#8208;expand include size: 2722/2097152 bytes
 Template argument size: 5668/2097152 bytes
 Highest expansion depth: 5/100
@@ -223,14 +220,14 @@ Unstrip post&#8208;expand size: 6504/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.647      1 -total
- 38.39%    2.936      1 Template:Macro/it
- 24.13%    1.845      1 Template:MacroCode
- 18.34%    1.402      1 Template:Caption
- 14.77%    1.129      1 Template:Clear
+100.00%    8.010      1 -total
+ 34.53%    2.766      1 Template:Macro/it
+ 22.36%    1.791      1 Template:Caption
+ 21.97%    1.760      1 Template:MacroCode
+ 16.75%    1.342      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62346-0!canonical and timestamp 20260122105028 and revision id 1742246. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62346-0!canonical and timestamp 20260122105046 and revision id 1742248. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
