--- a/wiki/it/Macro_Repro_Wire.html
+++ b/wiki/it/Macro_Repro_Wire.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Repro_Wire.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Linienzug kopieren (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Repro_Wire.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Repro Wire (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Repro_Wire.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Repro Wire (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Repro_Wire.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Repro Wire (6% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_Repro_Wire.html" class="mw-pt-progress mw-pt-progress--low" title="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089; Repro Wire (&#1044;&#1091;&#1073;&#1083;&#1080;&#1088;&#1086;&#1074;&#1072;&#1090;&#1100; &#1050;&#1088;&#1080;&#1074;&#1091;&#1102;) (11% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -193,41 +193,40 @@ except Exception:
 </p><p>00.02 22/09/2018&nbsp;: Compatible with FreeCAD 0.17 (getGlobalPlacement())
 </p><p>00.01 24/10/2015&nbsp;: extension to all objects
 </p><p>00.00 22/10/2015&nbsp;:
+</p><p><span id="Links"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Links">Links</span></h2>
-</div>
 <h2><span class="mw-headline" id="Link">Link</span></h2>
+<h2><span class="mw-headline" id="Link_2">Link</span></h2>
 <p>Nel forum <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=3&amp;t=12922">are there any tools to extrude only selected surface from a sketch?</a>
 </p><p><br>
 </p>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122105046
+Cached time: 20260122105050
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.056 seconds
+CPU time usage: 0.038 seconds
+Real time usage: 0.081 seconds
 Preprocessor visited node count: 116/1000000
 Post&#8208;expand include size: 2722/2097152 bytes
 Template argument size: 5668/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6504/5000000 bytes
+Unstrip post&#8208;expand size: 6508/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.010      1 -total
- 34.53%    2.766      1 Template:Macro/it
- 22.36%    1.791      1 Template:Caption
- 21.97%    1.760      1 Template:MacroCode
- 16.75%    1.342      1 Template:Clear
+100.00%   13.410      1 -total
+ 32.19%    4.317      1 Template:Macro/it
+ 23.65%    3.171      1 Template:Clear
+ 19.41%    2.603      1 Template:Caption
+ 18.44%    2.473      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62346-0!canonical and timestamp 20260122105046 and revision id 1742248. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62346-0!canonical and timestamp 20260122105050 and revision id 1742250. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
