--- a/wiki/it/Macro_Repro_Wire.html
+++ b/wiki/it/Macro_Repro_Wire.html
@@ -76,7 +76,7 @@ Replica un componente
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<p>Questa macro crea una copia di un oggetto o sotto-oggetto selezionato (inclusa in FreeCAD dalla versione 0.19: <a href="../it/Part_SimpleCopy.html" title="Part SimpleCopy/it">SimpleCopy di Part</a>).
+<p>Questa macro crea una copia di un oggetto o sotto-oggetto selezionato (inclusa in FreeCAD dalla versione 0.19: <a href="../it/Part_SimpleCopy.html" title="Part SimpleCopy/it">Copia semplice di Part</a>).
 </p><p><span typeof="mw:File"><a href="../index.php?title=Macro_ReproWire_00.png&amp;filetimestamp=20151024182612&amp;.html" class="mw-file-description"><img src="../File/Macro_ReproWire_00.png" decoding="async" width="480" height="360" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">ReproWire</p>
@@ -203,12 +203,12 @@ except Exception:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122105050
+Cached time: 20260122105129
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.081 seconds
+CPU time usage: 0.037 seconds
+Real time usage: 0.110 seconds
 Preprocessor visited node count: 116/1000000
 Post&#8208;expand include size: 2722/2097152 bytes
 Template argument size: 5668/2097152 bytes
@@ -219,14 +219,14 @@ Unstrip post&#8208;expand size: 6508/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.410      1 -total
- 32.19%    4.317      1 Template:Macro/it
- 23.65%    3.171      1 Template:Clear
- 19.41%    2.603      1 Template:Caption
- 18.44%    2.473      1 Template:MacroCode
+100.00%   15.031      1 -total
+ 29.94%    4.500      1 Template:Macro/it
+ 28.91%    4.346      1 Template:Caption
+ 27.48%    4.130      1 Template:MacroCode
+ 11.28%    1.696      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62346-0!canonical and timestamp 20260122105050 and revision id 1742250. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62346-0!canonical and timestamp 20260122105128 and revision id 1742252. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
