--- a/wiki/it/Macro_Half_turn_stairs.html
+++ b/wiki/it/Macro_Half_turn_stairs.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Half turn stairs/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Half+turn+stairs&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Half_turn_stairs.html" class="mw-pt-progress mw-pt-progress--med" title="Makro Halbwendeltreppe (36% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Half_turn_stairs.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Halbwendeltreppe (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Half_turn_stairs.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Half turn stairs (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_Half_turn_stairs.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Half turn stairs (57% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_Half_turn_stairs.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Half turn stairs (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Half_turn_stairs.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Half turn stairs (7% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -84,9 +84,7 @@ Scala a mezzo giro
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <ul><li>Copiare e salvare i dati come file stairs.dat nella prpria directory delle macro, vedere sotto il codice Data (stairs.dat).</li></ul>
 <ul><li>Avviare la macro e modificare l'altezza della scala. La svolta pu&ograve; essere a sinistra o a destra.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-</div>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Script_2">Script</span></h2>
 </div>
@@ -364,29 +362,29 @@ FreeCAD.ActiveDocument.recompute()
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20251022141833
+Cached time: 20260122105214
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.056 seconds
-Real time usage: 0.066 seconds
-Preprocessor visited node count: 128/1000000
+CPU time usage: 0.037 seconds
+Real time usage: 0.062 seconds
+Preprocessor visited node count: 127/1000000
 Post&#8208;expand include size: 2745/2097152 bytes
 Template argument size: 643/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 11444/5000000 bytes
+Unstrip post&#8208;expand size: 11456/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.581      1 -total
- 45.35%    2.531      1 Template:Macro/it
- 26.32%    1.469      1 Template:Caption
- 25.53%    1.425      1 Template:MacroCode
+100.00%   10.610      1 -total
+ 41.57%    4.411      1 Template:Macro/it
+ 28.48%    3.022      1 Template:Caption
+ 27.42%    2.909      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74987-0!canonical and timestamp 20251022141833 and revision id 1672381. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74987-0!canonical and timestamp 20260122105214 and revision id 1742254. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
