--- a/wiki/it/Macro_Half_turn_stairs.html
+++ b/wiki/it/Macro_Half_turn_stairs.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Half_turn_stairs.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Halbwendeltreppe (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Half_turn_stairs.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Half turn stairs (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Half_turn_stairs.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Half turn stairs (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Half_turn_stairs.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Half turn stairs (7% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -85,10 +85,8 @@ Scala a mezzo giro
 <ul><li>Copiare e salvare i dati come file stairs.dat nella prpria directory delle macro, vedere sotto il codice Data (stairs.dat).</li></ul>
 <ul><li>Avviare la macro e modificare l'altezza della scala. La svolta pu&ograve; essere a sinistra o a destra.</li></ul>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Script_2">Script</span></h2>
-</div>
-<p><b>Half_turn_stairs.FCMacro</b>
+<p>Icona barra degli strumenti <span typeof="mw:File"><a href="../index.php?title=Half_turn_stairs.png&amp;filetimestamp=20161017163817&amp;.html" class="mw-file-description"><img src="../File/Half_turn_stairs.png" decoding="async" width="64" height="57" class="mw-file-element" data-file-width="480" data-file-height="425"></a></span>
+</p><p><b>Half_turn_stairs.FCMacro</b>
 </p>
 <pre># -*- coding: utf-8 -*-
 #
@@ -362,29 +360,29 @@ FreeCAD.ActiveDocument.recompute()
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260122105214
+Cached time: 20260122105231
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.062 seconds
-Preprocessor visited node count: 127/1000000
+CPU time usage: 0.035 seconds
+Real time usage: 0.052 seconds
+Preprocessor visited node count: 124/1000000
 Post&#8208;expand include size: 2745/2097152 bytes
 Template argument size: 643/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 11456/5000000 bytes
+Unstrip post&#8208;expand size: 11457/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.610      1 -total
- 41.57%    4.411      1 Template:Macro/it
- 28.48%    3.022      1 Template:Caption
- 27.42%    2.909      1 Template:MacroCode
+100.00%    9.346      1 -total
+ 38.36%    3.585      1 Template:Macro/it
+ 30.23%    2.825      1 Template:Caption
+ 28.40%    2.654      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74987-0!canonical and timestamp 20260122105214 and revision id 1742254. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74987-0!canonical and timestamp 20260122105231 and revision id 1742256. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
