--- a/wiki/it/Macro_Half_turn_stairs.html
+++ b/wiki/it/Macro_Half_turn_stairs.html
@@ -306,11 +306,8 @@ FreeCAD.ActiveDocument.recompute()
 <p><span id="Data_(stairs.dat)"></span>
 </p>
 <h2><span id="Dati_.28stairs.dat.29"></span><span class="mw-headline" id="Dati_(stairs.dat)">Dati (stairs.dat)</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span id="Dati_.28stairs.dat.29_2"></span><span class="mw-headline" id="Dati_(stairs.dat)_2">Dati (stairs.dat)</span></h2>
-<p>Salva questi dati come file <b>stairs.dat</b> nella propria directory delle macro
+<p>Salvare questi dati come file <b>stairs.dat</b> nella propria cartella delle macro
 </p>
-</div>
 <pre>#
 # Save this Data as file stairs.dat in your macro directory
 # 
@@ -360,13 +357,13 @@ FreeCAD.ActiveDocument.recompute()
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260122105239
+Cached time: 20260122105259
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.045 seconds
-Real time usage: 0.085 seconds
-Preprocessor visited node count: 124/1000000
+CPU time usage: 0.032 seconds
+Real time usage: 0.048 seconds
+Preprocessor visited node count: 120/1000000
 Post&#8208;expand include size: 2745/2097152 bytes
 Template argument size: 643/2097152 bytes
 Highest expansion depth: 5/100
@@ -376,13 +373,13 @@ Unstrip post&#8208;expand size: 11457/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.312      1 -total
- 54.87%   11.693      1 Template:Macro/it
- 21.20%    4.518      1 Template:MacroCode
- 20.45%    4.359      1 Template:Caption
+100.00%    7.839      1 -total
+ 43.30%    3.394      1 Template:Macro/it
+ 34.57%    2.710      1 Template:MacroCode
+ 19.98%    1.566      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74987-0!canonical and timestamp 20260122105239 and revision id 1742258. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74987-0!canonical and timestamp 20260122105259 and revision id 1742260. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
