--- a/wiki/it/Macro_Half_turn_stairs.html
+++ b/wiki/it/Macro_Half_turn_stairs.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Half_turn_stairs.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Halbwendeltreppe (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Half_turn_stairs.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Half turn stairs (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Half_turn_stairs.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Half turn stairs (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Half_turn_stairs.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Half turn stairs (7% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -348,38 +348,35 @@ FreeCAD.ActiveDocument.recompute()
 # Stufe 17
 1230.0 -240.0 0.0 1230.0 0.0 0.0 2230.0 0.0 0.0 2230.0 -240.0 0.0 1230.0 -240.0 0.0
 </pre>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Links">Links</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Links"></span>
+</p>
 <h2><span class="mw-headline" id="Link">Link</span></h2>
-<ul><li><a href="../it/Macro_PartsLibrary.html" title="Macro PartsLibrary/it">Macro_PartsLibrary</a> FreeCAD Library</li></ul>
-</div>
+<ul><li><a href="../it/Macro_PartsLibrary.html" title="Macro PartsLibrary/it">Macro_PartsLibrary</a> Libreria di FreeCAD</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260122105259
+Cached time: 20260122105354
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.032 seconds
-Real time usage: 0.048 seconds
-Preprocessor visited node count: 120/1000000
+CPU time usage: 0.038 seconds
+Real time usage: 0.092 seconds
+Preprocessor visited node count: 116/1000000
 Post&#8208;expand include size: 2745/2097152 bytes
 Template argument size: 643/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 11457/5000000 bytes
+Unstrip post&#8208;expand size: 11461/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.839      1 -total
- 43.30%    3.394      1 Template:Macro/it
- 34.57%    2.710      1 Template:MacroCode
- 19.98%    1.566      1 Template:Caption
+100.00%   12.952      1 -total
+ 36.43%    4.718      1 Template:Macro/it
+ 32.94%    4.267      1 Template:Caption
+ 28.98%    3.753      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74987-0!canonical and timestamp 20260122105259 and revision id 1742260. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74987-0!canonical and timestamp 20260122105354 and revision id 1742264. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
