--- a/wiki/it/Macro_Replace_Part_in_Assembly.html
+++ b/wiki/it/Macro_Replace_Part_in_Assembly.html
@@ -1,13 +1,13 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Replace Part in Assembly/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Replace+Part+in+Assembly&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
+<li><a href="../de/Macro_Replace_Part_in_Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Teil in Baugruppe ersetzen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Replace_Part_in_Assembly.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Replace Part in Assembly (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_Replace_Part_in_Assembly.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Replace Part in Assembly (40% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_Replace_Part_in_Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Replace Part in Assembly (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Macro_Replace_Part_in_Assembly.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Zamie&#324; cze&#347;&#263; w z&#322;o&#380;eniu (10% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<div class="mw-translate-fuzzy">
+<li><a href="../pl/Macro_Replace_Part_in_Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Zamie&#324; cze&#347;&#263; w z&#322;o&#380;eniu (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span typeof="mw:File"><a href="../index.php?title=Replace_Part.png&amp;filetimestamp=20141116200051&amp;.html" class="mw-file-description"><img src="../File/Replace_Part.png" decoding="async" width="32" height="30" class="mw-file-element"></a></span><span> </span>
+<p><span typeof="mw:File"><a href="../index.php?title=Replace_Part.png&amp;filetimestamp=20141116200051&amp;.html" class="mw-file-description"><img src="../File/Replace_Part.png" decoding="async" width="32" height="30" class="mw-file-element" data-file-width="50" data-file-height="47"></a></span><span> </span>
 Sostituisci Parte in Assembly
 </p>
 </td></tr>
@@ -15,7 +15,7 @@ Sostituisci Parte in Assembly
 <th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Sostituisce una Parte in un assemlaggio<br><br>Versione macro: 1.0<br>Ultima modifica: 2014-09-10<br>Versione FreeCAD: All<br>Download: <a rel="nofollow" class="external text" href="https://www.freecadweb.org/wiki/images/0/07/Replace_Part.png">ToolBar Icon</a><br>Autore: ralvejd<br>
+<td class="ctEven left macro-description">Sostituisce una Parte in un assemlaggio<br><br>Versione macro: 1.0<br>Ultima modifica: 2014-09-10<br>Versione FreeCAD: All<br>Download: <a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/images/0/07/Replace_Part.png">ToolBar Icon</a><br>Autore: ralvejd<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Autore
@@ -27,7 +27,7 @@ Sostituisci Parte in Assembly
 <th class="ctOdd">Download
 </th></tr>
 <tr>
-<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://www.freecadweb.org/wiki/images/0/07/Replace_Part.png">ToolBar Icon</a>
+<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/images/0/07/Replace_Part.png">ToolBar Icon</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Link
@@ -72,12 +72,11 @@ Sostituisci Parte in Assembly
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Specialmente quando si fanno degli "insiemi" con semplici copie di parti, capita di dover sostituire pi&ugrave; volte una parte con un'altra. Per queste operazioni &egrave; possibile utilizzare questa macro.
 </p>
 </div>
@@ -96,7 +95,7 @@ Sostituisci Parte in Assembly
 <li>Utilizzare le altre opzioni a proprio piacimento.</li>
 <li>Quindi cliccare su "Replace Old Part".</li></ol>
 </div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Replace_Part_in_Assembly.jpg&amp;filetimestamp=20141116193509&amp;.html" class="mw-file-description"><img src="../File/Macro_Replace_Part_in_Assembly.jpg" decoding="async" width="418" height="455" class="mw-file-element"></a></span>
+<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Replace_Part_in_Assembly.jpg&amp;filetimestamp=20141116193509&amp;.html" class="mw-file-description"><img src="../File/Macro_Replace_Part_in_Assembly.jpg" decoding="async" width="418" height="455" class="mw-file-element" data-file-width="418" data-file-height="455"></a></span>
 </p><p>Vedere anche <a rel="nofollow" class="external text" href="http://youtu.be/rTqqqy4n1RE">Demo su Youtube</a>.
 </p><p><span id="Script"></span>
 </p>
@@ -104,7 +103,7 @@ Sostituisci Parte in Assembly
 <p>Macro Replace_Part_in_Assembly.py
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Replace_Part.png&amp;filetimestamp=20141116200051&amp;.html" class="mw-file-description"><img src="../File/Replace_Part.png" decoding="async" width="50" height="47" class="mw-file-element"></a></span>
+<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Replace_Part.png&amp;filetimestamp=20141116200051&amp;.html" class="mw-file-description"><img src="../File/Replace_Part.png" decoding="async" width="50" height="47" class="mw-file-element" data-file-width="50" data-file-height="47"></a></span>
 </p>
 </div>
 <p><b>Macro Replace_Part_in_Assembly.py</b>
@@ -686,29 +685,29 @@ class replace():
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20250713105305
+Cached time: 20260122105454
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.022 seconds
-Real time usage: 0.027 seconds
-Preprocessor visited node count: 101/1000000
-Post&#8208;expand include size: 1964/2097152 bytes
-Template argument size: 27735/2097152 bytes
+CPU time usage: 0.040 seconds
+Real time usage: 0.068 seconds
+Preprocessor visited node count: 100/1000000
+Post&#8208;expand include size: 1955/2097152 bytes
+Template argument size: 27726/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 28429/5000000 bytes
+Unstrip post&#8208;expand size: 28634/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.870      1 -total
- 49.77%    1.926      1 Template:Macro/it
- 26.18%    1.013      1 Template:MacroCode
- 20.62%    0.798      1 Template:Clear
+100.00%    8.004      1 -total
+ 41.35%    3.310      1 Template:Macro/it
+ 36.69%    2.937      1 Template:MacroCode
+ 17.47%    1.398      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:47835-0!canonical and timestamp 20250713105305 and revision id 1611740. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:47835-0!canonical and timestamp 20260122105453 and revision id 1742266. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
