--- a/wiki/it/Macro_Replace_Part_in_Assembly.html
+++ b/wiki/it/Macro_Replace_Part_in_Assembly.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Replace_Part_in_Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Teil in Baugruppe ersetzen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Replace_Part_in_Assembly.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Replace Part in Assembly (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Replace_Part_in_Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Replace Part in Assembly (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Replace_Part_in_Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Zamie&#324; cze&#347;&#263; w z&#322;o&#380;eniu (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -75,11 +75,8 @@ Sostituisci Parte in Assembly
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
-<p>Specialmente quando si fanno degli "insiemi" con semplici copie di parti, capita di dover sostituire pi&ugrave; volte una parte con un'altra. Per queste operazioni &egrave; possibile utilizzare questa macro.
+<p>Sostituisce una parte (copia semplice) in un "Assembly" con un'altra Parte (copia semplice).
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
 </div>
@@ -685,29 +682,29 @@ class replace():
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122105454
+Cached time: 20260122105522
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.068 seconds
-Preprocessor visited node count: 100/1000000
+CPU time usage: 0.036 seconds
+Real time usage: 0.062 seconds
+Preprocessor visited node count: 96/1000000
 Post&#8208;expand include size: 1955/2097152 bytes
 Template argument size: 27726/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 28634/5000000 bytes
+Unstrip post&#8208;expand size: 28635/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.004      1 -total
- 41.35%    3.310      1 Template:Macro/it
- 36.69%    2.937      1 Template:MacroCode
- 17.47%    1.398      1 Template:Clear
+100.00%    9.539      1 -total
+ 40.91%    3.903      1 Template:MacroCode
+ 37.44%    3.571      1 Template:Macro/it
+ 18.92%    1.805      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:47835-0!canonical and timestamp 20260122105453 and revision id 1742266. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:47835-0!canonical and timestamp 20260122105521 and revision id 1742268. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
