--- a/wiki/it/Macro_Replace_Part_in_Assembly.html
+++ b/wiki/it/Macro_Replace_Part_in_Assembly.html
@@ -76,12 +76,11 @@ Sostituisci Parte in Assembly
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>Sostituisce una parte (copia semplice) in un "Assembly" con un'altra Parte (copia semplice).
+</p><p><span id="Usage"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Utilizzo_2">Utilizzo</span></h2>
 <p>Accertarsi che i file che contengono la parte vecchia e la parte nuova siano aperti.
 </p>
 <ol><li>Avviare macro.</li>
@@ -682,12 +681,12 @@ class replace():
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122105522
+Cached time: 20260122105527
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.062 seconds
+CPU time usage: 0.035 seconds
+Real time usage: 0.059 seconds
 Preprocessor visited node count: 96/1000000
 Post&#8208;expand include size: 1955/2097152 bytes
 Template argument size: 27726/2097152 bytes
@@ -698,13 +697,13 @@ Unstrip post&#8208;expand size: 28635/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.539      1 -total
- 40.91%    3.903      1 Template:MacroCode
- 37.44%    3.571      1 Template:Macro/it
- 18.92%    1.805      1 Template:Clear
+100.00%    7.002      1 -total
+ 36.60%    2.563      1 Template:Macro/it
+ 35.22%    2.466      1 Template:MacroCode
+ 24.61%    1.723      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:47835-0!canonical and timestamp 20260122105521 and revision id 1742268. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:47835-0!canonical and timestamp 20260122105527 and revision id 1742270. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
